gcc/testsuite/gfortran.dg/oldstyle_2.f90
! { dg-do compile }
subroutine foo(i) ! { dg-error "DATA attribute" }
  integer i /10/
end subroutine foo
